# rust-samlocalapi-localstack

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  swagger.yml  template.yml
scripts/: init.sh
src/: get_function.rs  post_function.rs
