[package]
name = "rust-samlocalapi-localstack"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.6"
aws-sdk-dynamodb = "1.93.0"
aws_lambda_events = "0.18.0"
features = "0.10.0"
lambda_runtime = "0.6.0"
log = "0.4.28"
serde = "1.0.228"
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt", "json"] }

[[bin]]
name = "get_function"
path = "src/get_function.rs"

[[bin]]
name = "post_function"
path = "src/post_function.rs"
